# WidenerRobosub

robosub_driver/install/: local_setup.sh  setup.sh
robosub_driver/install/motorinfo/lib/motorinfo/: motorauv  motorauv2  motorcommand  motorkey
robosub_driver/install/motorinfo/share/motorinfo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robosub_driver/install/ms5837/share/ms5837/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robosub_driver/install/sensorinfo/lib/sensorinfo/: depth  depthIMU  hydrophone  imu
robosub_driver/install/sensorinfo/share/sensorinfo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robosub_driver/src/motorinfo/: .setup.py.swp  package.xml  setup.py
robosub_driver/src/motorinfo/launch/: launch_driver.py
robosub_driver/src/motorinfo/motorinfo/: motorauv.py
robosub_driver/src/motorinfo/msg/: CommandMsg.msg
robosub_driver/src/sensorinfo/: setup.py
robosub_navigator/install/: local_setup.sh  setup.sh
robosub_navigator/install/camerainfo/lib/camerainfo/: cam  frontcam  grippercam
robosub_navigator/install/camerainfo/share/camerainfo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robosub_navigator/install/camerainfo/share/camerainfo/launch/: camlaunch.xml
robosub_navigator/mlmodel/: ardumodel.pt
robosub_navigator/src/camerainfo/: package.xml  setup.cfg  setup.py
robosub_navigator/src/camerainfo/camerainfo/: frontcam.py
robosub_navigator/src/camerainfo/launch/: fclaunch.py
